--- a/MarketplaceWeb/appsettings.json
+++ b/MarketplaceWeb/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-08BJSET;Database=MarketplaceWeb;Trusted_Connection=True;TrustServerCertificiate=True"
+  }
+
 }
