--- a/MarketplaceWeb/MarketplaceWeb.csproj
+++ b/MarketplaceWeb/MarketplaceWeb.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarketplaceWeb.DataAccess\MarketplaceWeb.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
